--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,15 @@
 {
     "extends": "@apify/tsconfig",
     "compilerOptions": {
+        "baseUrl": ".",
+        "paths": {
+           "@/*": ["src/*"]
+       },
         "module": "ES2022",
         "target": "ES2022",
         "outDir": "dist",
         "noUnusedLocals": false,
-        "lib": ["DOM"]
+        "lib": ["DOM"],
     },
     "include": [
         "./src/**/*"
