--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "type": "module",
     "description": "This is an example of a Crawlee project.",
     "dependencies": {
+        "apify-cli": "^0.15.1",
         "crawlee": "^3.0.0",
         "playwright": "*",
         "puppeteer": "^19.7.5",
